metadatafullcopy/unpackaged/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Env_Contents_Supervisor__c</fullName>
        <description>Field to note the supervisor of Environmental or Contents jobs.</description>
        <label>Env/Contents Supervisor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alejo Rodriguez, Armando</fullName>
                </value>
                <value>
                    <fullName>Almada, Marco E</fullName>
                </value>
                <value>
                    <fullName>Alva, Joel</fullName>
                </value>
                <value>
                    <fullName>Ambriz, David</fullName>
                </value>
                <value>
                    <fullName>Ambriz, Gerardo</fullName>
                </value>
                <value>
                    <fullName>Arangure, Rogelio</fullName>
                </value>
                <value>
                    <fullName>Arellano, Valente</fullName>
                </value>
                <value>
                    <fullName>Arias, Mauro</fullName>
                </value>
                <value>
                    <fullName>Arreguin Nunez, Rigoberto</fullName>
                </value>
                <value>
                    <fullName>Avina, Francisco</fullName>
                </value>
                <value>
                    <fullName>Barrera, Jose</fullName>
                </value>
                <value>
                    <fullName>Beltran, Maribel</fullName>
                </value>
                <value>
                    <fullName>Burton, Rhonda</fullName>
                </value>
                <value>
                    <fullName>Bustamante, Simon</fullName>
                </value>
                <value>
                    <fullName>Calderon, Jr., Miguel</fullName>
                </value>
                <value>
                    <fullName>Calderon, Miguel</fullName>
                </value>
                <value>
                    <fullName>Camargo, Eduardo</fullName>
                </value>
                <value>
                    <fullName>Campos, Richard J.</fullName>
                </value>
                <value>
                    <fullName>Campos, Veronica</fullName>
                </value>
                <value>
                    <fullName>Caraveo, Hector</fullName>
                </value>
                <value>
                    <fullName>Carrasco, Daniel</fullName>
                </value>
                <value>
                    <fullName>Castellanos, Ramon A.</fullName>
                </value>
                <value>
                    <fullName>Cellona, Juan D.</fullName>
                </value>
                <value>
                    <fullName>Cervantes, Francisco Jr.</fullName>
                </value>
                <value>
                    <fullName>Chavez, Melesio</fullName>
                </value>
                <value>
                    <fullName>Colon, Anthony</fullName>
                </value>
                <value>
                    <fullName>Dalo, Anthony J.</fullName>
                </value>
                <value>
                    <fullName>De Infante, Anastacia</fullName>
                </value>
                <value>
                    <fullName>De Santiago, Juan M.</fullName>
                </value>
                <value>
                    <fullName>Durazo, Christian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Error_Log__c</fullName>
        <description>To debug the PM update</description>
        <label>Error Log</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estimate_Amount_JTD_worked_billed__c</fullName>
        <description>Flag to note that Amount is equal to Job-to-date work billed.</description>
        <formula>IF( Amount = Job_to_Date_Work_Billed__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimate Amount = JTD worked billed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimate_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is to indicate that the job is only an estimate</description>
        <label>Estimate Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimate_Status__c</fullName>
        <description>Estimate Status to be updated by Managed Repair Program Admins.</description>
        <label>Estimate Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Estimating</fullName>
                </value>
                <value>
                    <fullName>Uploaded</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimate_Submitted_Date__c</fullName>
        <description>Field to indicate the date an estimate was sent to a prospective client.</description>
        <label>Estimate Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Completion_Date__c</fullName>
        <description>This date should reflect the estimated completion date on the contract with the customer.</description>
        <label>Estimated Completion Date per Contract</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Job_Walk_Date__c</fullName>
        <description>Date that final job walk took place</description>
        <label>Final Job Walk Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Forecast_Last_Timberline_Update__c</fullName>
        <label>Forecast Last Timberline Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Forms_Count_Jobs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Forms Count Jobs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <description>“Google click ID,” the ID that indicates that a customer came from one of your AdWords ads.</description>
        <label>GCLID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Account_Prefix_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is check, it will overwrite the GL code assigned by the system.</description>
        <inlineHelpText>Check to overwrite.</inlineHelpText>
        <label>GL Account Prefix Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GL_Account_Prefix__c</fullName>
        <description>SYSTEM USE ONLY. This field is automatically populated by Apex when a record saves. It is used to populate a field with the same name in TImberline. It is only populated if the user has the feature to calculate job numbers.</description>
        <inlineHelpText>SYSTEM USE ONLY</inlineHelpText>
        <label>GL Account Prefix</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_AdjWF__c</fullName>
        <description>JC Adjustment to bring GP to Estimate-Populated by WorkFlow</description>
        <label>GP_AdjWF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GP_Adj__c</fullName>
        <formula>if(round(abs( Job_to_Date_Work_Billed_minus_Next_Month__c * (1-Gross_Profit__c )- Job_to_Date_Costs_minus_Next_Month_Costs__c),-2)&lt;5000,0,(round(Job_to_Date_Work_Billed_minus_Next_Month__c * (1-Gross_Profit__c )- Job_to_Date_Costs_minus_Next_Month_Costs__c,-2)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GP_Adj</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GSA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Government Service Administration - Per Jeff Moor&apos;s request.</description>
        <inlineHelpText>Government Service Administration</inlineHelpText>
        <label>GSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GeoPointe_GeoLocation__c</fullName>
        <label>GeoPointe GeoLocation</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Geocode_Quality__c</fullName>
        <label>Geocode Quality</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geocode_Retrieval_Time__c</fullName>
        <label>Geocode Retrieval Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Gross_Profit__c</fullName>
        <description>Field to indicate the % of Gross Profit of the Job</description>
        <label>Estimated Gross Profit %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Has_national_account__c</fullName>
        <formula>IF (OR(National_Account__c != &apos;&apos;, National_Account__c != NULL), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has national account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hold_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag the Job to be removed from sales report.</description>
        <label>Hold Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <description>Home Phone of Project Site Contact</description>
        <formula>Project_Site_Contact_Name__r.HomePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_Acct__c</fullName>
        <description>Flag to note whether or not the job is a house account.</description>
        <label>House Acct</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inspected__c</fullName>
        <description>Date when PD inspects the property for the first time.  Managed Program Repair Admin to input.</description>
        <inlineHelpText>Update XACT</inlineHelpText>
        <label>Inspected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Adjuster_Broker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Insurance Adjuster/Broker for this Job-- referenced in New Job VF page</description>
        <label>Insurance Adjuster/Broker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Insurance Adjuster/Broker)</relationshipLabel>
        <relationshipName>OpportunitiesIAB1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Overdue_Days__c</fullName>
        <description>How many days an invoice is overdue. Today() - Completion Date.</description>
        <formula>today() - Completion_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Overdue Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JC_Adjustment__c</fullName>
        <description>Dollar difference between actual and forecast GP.</description>
        <formula>Round(((Job_to_Date_Work_Billed_Next_Month__c * (1-Gross_Profit__c))-Job_to_Date_Costs_Next_Month_Costs__c),-2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JC Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JC_Category__c</fullName>
        <description>Codes for Division</description>
        <formula>if( ISPICKVAL(Division__c ,&quot;Structure&quot;),&quot;S&quot;,&quot;L&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JC Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JTD_Costs_YTD_Costs__c</fullName>
        <description>Job to date costs minus year to date costs</description>
        <formula>Job_to_Date_Costs__c - Year_to_Date_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JTD Costs - YTD Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JTD_NM_GP__c</fullName>
        <formula>JTD_NM_Profit__c / Job_to_Date_Work_Billed_Next_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JTD-NM_GP%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>JTD_NM_Profit__c</fullName>
        <formula>Job_to_Date_Work_Billed_Next_Month__c - Job_to_Date_Costs_Next_Month_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JTD-NM_Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JTD_Profit__c</fullName>
        <description>Job to Date Work Billed minus Job to date costs</description>
        <formula>Job_to_Date_Work_Billed__c - Job_to_Date_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JTD Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Category__c</fullName>
        <description>Category of job</description>
        <label>Job Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hurricane Florence</fullName>
                </value>
                <value>
                    <fullName>Hurricane Harvey</fullName>
                </value>
                <value>
                    <fullName>Hurricane Irma</fullName>
                </value>
                <value>
                    <fullName>Napa Earthquake</fullName>
                </value>
                <value>
                    <fullName>AZ 0914 Monsoon</fullName>
                </value>
                <value>
                    <fullName>Wine Country Fires</fullName>
                </value>
                <value>
                    <fullName>2018 - Southern CA fires</fullName>
                </value>
                <value>
                    <fullName>2018 - Northern CA fires</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Class__c</fullName>
        <description>Indicator of job classification/industry</description>
        <label>Job Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Multi-Family</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Educational</fullName>
                </value>
                <value>
                    <fullName>Health Science</fullName>
                    <label>Healthcare</label>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Municipality/ Gov&apos;t</fullName>
                </value>
                <value>
                    <fullName>GSA</fullName>
                </value>
                <value>
                    <fullName>Religious</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Name_Length__c</fullName>
        <description>This field counts the number of characters of the Job Name.</description>
        <formula>LEN( Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Name Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Name__c</fullName>
        <description>Job Name field is used on New Job VF page, used to pass along to Timberline, and used to update Opportunity Name field via &apos;Opportunity Naming Convention&apos; workflow.</description>
        <label>Job Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Number_Compare__c</fullName>
        <formula>Name &lt;&gt; Job_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Number Compare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Number_Last_5__c</fullName>
        <formula>VALUE(RIGHT( Job_Number__c , 5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Number Last 5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Number_No_Dash_Last_5__c</fullName>
        <description>Last 5 digits of Job number without dashes</description>
        <formula>VALUE( RIGHT( Job_Number_No_Dashes__c , 5))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Number No Dash Last 5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Number_No_Dashes__c</fullName>
        <description>A hidden field used to allow for searching on the job number without dashes</description>
        <externalId>true</externalId>
        <inlineHelpText>SYSTEM USE ONLY - Please do not modify</inlineHelpText>
        <label>Job Number (No Dashes)</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Number_Sequence_Group__c</fullName>
        <description>SYSTEM USE ONLY. Used to categorize sequential values. Each group has its own job sequence</description>
        <inlineHelpText>SYSTEM USE ONLY.</inlineHelpText>
        <label>Job Number Sequence Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Number_Sequence__c</fullName>
        <description>Contains the sequential aspect of the job number for this job. This is pulled from the lead record and should not be manually updated.</description>
        <externalId>true</externalId>
        <label>Job Number Sequence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Number__c</fullName>
        <description>Job unique identifier/external ID populated via code.  Numbers are representative of Office, Division, PM ID, and Year.</description>
        <externalId>true</externalId>
        <label>Job Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Prev_Name__c</fullName>
        <label>Job Prev Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Stage_For_Kanban__c</fullName>
        <description>This is a copy of StageName field to use on the list views. (Not in use yet)</description>
        <label>Job Stage For Kanban</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Estimating/Review</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Work Complete</fullName>
                </value>
                <value>
                    <fullName>Billing Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Start_Date__c</fullName>
        <description>Field to indicate projected start date of a job</description>
        <inlineHelpText>Auto time stamped when the job is marked won.</inlineHelpText>
        <label>Job Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <description>Program field to check on the status of the job, not stages</description>
        <label>Job Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <description>Job Type populated by workflow &apos;Job Type update&apos; to be used in bonus calculations</description>
        <label>Job Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>ATI_Job__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_to_Date_Adjustments__c</fullName>
        <label>Job-to-Date Adjustments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_to_Date_Costs_Next_Month_Costs__c</fullName>
        <description>Job-to-date costs minus next month&apos;s costs</description>
        <formula>Job_to_Date_Costs__c - Next_Month_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job-to-Date Costs - Next Month Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_to_Date_Costs__c</fullName>
        <description>Field populated via Timberline integration to indicate costs incurred on the job thus far</description>
        <label>Job-to-Date Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_to_Date_Costs_minus_Next_Month_Costs__c</fullName>
        <description>Field populated via Timberline integration to indicate Job-to-Date Costs minus Next Month&apos;s Cost</description>
        <label>*Job-to-Date Costs - Next Month Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_to_Date_Dollars_Paid__c</fullName>
        <description>Field populated via Timberline integration to indicate dollars paid thus far</description>
        <label>Job-to-Date Dollars Paid-AP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_to_Date_Payments__c</fullName>
        <description>Field populated via Timberline integration to indicate payments made to date.</description>
        <label>Job-to-Date Payments-AR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_to_Date_Work_Billed_Next_Month__c</fullName>
        <description>Job-to-date work billed minus next month work billed</description>
        <formula>Job_to_Date_Work_Billed__c - Next_Month_Work_Billed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job-to-Date Work Billed - Next Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_to_Date_Work_Billed__c</fullName>
        <description>Populated from Timberline-- amount that has been billed to the client thus far.</description>
        <label>Job-to-Date Work Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_to_Date_Work_Billed_minus_Next_Month__c</fullName>
        <description>Field populated via Timberline integration to indicate Job-to-Date Work Billed minus Next Month.</description>
        <label>*Job-to-Date Work Billed - Next Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LID__Is_Influenced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Opportunity was influenced by activities on LinkedIn Sales Navigator</description>
        <label>Is_Influenced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ladder_Assist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ladder Assist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_FotoIn_Update__c</fullName>
        <label>Last FotoIn Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Month_Costs__c</fullName>
        <description>Field populated via Timberline integration to indicate last month&apos;s costs related to the job.</description>
        <label>Last Month Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Month_Dollars_Paid__c</fullName>
        <description>Field populated via Timberline integration to indicate dollars paid last month</description>
        <label>Last Month Dollars Paid-AP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Month_Work_Billed__c</fullName>
        <description>Field populated via Timberline integration to indicate work billed last month.</description>
        <label>Last Month Work Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Successful_FotoIn_Update__c</fullName>
        <label>Last Successful FotoIn Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Successful_Timberline_Forecast_Sync__c</fullName>
        <description>Last successful push of Timberline fields being populated into SFDC Forecast Analysis section.</description>
        <label>Last Successful Timberline Forecast Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Successful_Timberline_Update__c</fullName>
        <description>Date of last successful Timberline update.</description>
        <label>Last Successful Timberline Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Timberline_Update__c</fullName>
        <description>Field to indicate the last Timberline update</description>
        <label>Last Timberline Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_RRP_Apply__c</fullName>
        <label>Lead RRP Apply?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Job_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Job ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lost_Job_Description__c</fullName>
        <description>Description on why a opportunity/job was lost if &apos;Lost Reason&apos; of &quot;Other&quot; is chosen.</description>
        <label>Lost Job Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lost_Job_Reason__c</fullName>
        <description>Reasons for losing a job</description>
        <label>Lost Job Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Cashed Out</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Declined to Bid</fullName>
                </value>
                <value>
                    <fullName>Lack of Funding</fullName>
                </value>
                <value>
                    <fullName>Deductible Issues</fullName>
                </value>
                <value>
                    <fullName>Adjuster&apos;s Contractor</fullName>
                </value>
                <value>
                    <fullName>Scheduling Conflict</fullName>
                </value>
                <value>
                    <fullName>Preferred a Competitor</fullName>
                </value>
                <value>
                    <fullName>Canceled by carrier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ML_Amount__c</fullName>
        <label>ML Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ML_Recording_Date__c</fullName>
        <label>ML Recording Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ML_Recording_Number__c</fullName>
        <label>ML Recording Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ML_Release_Recording_Date__c</fullName>
        <label>ML Release Recording Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ML_Request_Date__c</fullName>
        <label>ML Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MTD_Profit__c</fullName>
        <description>Month-to-Date Profit -- MTD work billed minus MTD costs.</description>
        <formula>Month_to_Date_Work_Billed__c - Month_to_Date_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Major_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Major Event</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Major_Event__c.Status__c</field>
                <operation>notEqual</operation>
                <value>Inactive</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Major_Event__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Modified_Allocations__c</fullName>
        <label>Modified Allocations</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_to_Date_Costs__c</fullName>
        <description>Field populated via Timberline integration to indicate month-to-date costs</description>
        <label>Month-to-Date Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month_to_Date_Dollars_Paid__c</fullName>
        <description>Field populated via Timberline integration to indicate dollars paid thus far this month</description>
        <label>Month-to-Date Dollars Paid-AP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month_to_Date_Work_Billed__c</fullName>
        <description>Field populated by Timberline integration to indicate month-to-date work billed.</description>
        <label>Month-to-Date Work Billed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>My_Office__c</fullName>
        <description>This field will match Job office with current users office to show records only for their offices.</description>
        <formula>if(Office2__r.Name =  TEXT($User.Office__c), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Office</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>